Source/JavaScriptCore/bytecode/Opcode.h
@@ -127,7 +127,7 @@ namespace JSC {
         macro(op_put_by_id_generic, 9) \
         macro(op_del_by_id, 4) \
         macro(op_get_by_val, 5) /* has value profiling */ \
-        macro(op_get_argument_by_val, 4) \
+        macro(op_get_argument_by_val, 5) /* must be the same size as op_get_by_val */ \
         macro(op_get_by_pname, 7) \
         macro(op_put_by_val, 4) \
         macro(op_del_by_val, 4) \
